--- a/public/index.html
+++ b/public/index.html
@@ -20,45 +20,34 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Szikora Transz Kft. | Profi áruszállítás és logisztika</title>
+    <meta name="description" content="A Szikora Transz Kft. országos áruszállítást, és logisztikai megoldásokat kínál."/>
+    <meta name="keywords" content="szállítás, áruszállítás, Szikora Transz,Szikora, kamion,sofőr,állás, logisztika,Leányvár,Esztergom,Budapest"/>
+    <link rel="canonical" href="https://szikora-transz.hu"/>
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="%PUBLIC_URL%/apple-icon.png"
-    />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Szikora Transz Kft</title>
+    <meta property="og:title" content="Szikora Transz Kft. | Szállítási megoldások"/>
+    <meta property="og:description" content="Professzionális áruszállítás és logisztika Magyarországon."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://szikora-transz.hu"/>
+    <meta property="og:image" content="https://szikora-transz.hu/apple-icon.png"/> 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Szikora Transz Kft.",
+        "image": "https://szikora-transz.hu/apple-icon.png",
+        "telephone": "+36-30-382-8537",
+        "address": {
+          "@type": "2518",
+          "streetAddress": "Bécsi út 86",
+          "addressLocality": "Leányvár",
+          "addressCountry": "HU"
+        }
+      }
+      </script>
   </head>
   <body class="text-blueGray-700 antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
