--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="manifest" href="/manifest.json" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Szikora Transz Kft. | Profi áruszállítás és logisztika</title>
